[package]
name = "emf2024-thermal-printer-flyers"
license = "MIT"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "~4.4.18", features = ["derive"] }
escpos = { version = "0.12.2", features = ["serial_port", "graphics"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
